examples/type_system/failing/93_hm_match_arm_contextual_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E300: concrete match arms now report contextual mismatch diagnostics with dual labels.
fn main() -> Unit {
    let _x = match true {
        true -> 1,
        false -> "no",
    }
}
